--- a/rest/.recommenders/caches/identified-project-coordinates.json
+++ b/rest/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"/Library/Java/JavaVirtualMachines/jdk1.8.0_111.jdk/Contents/Home","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"/Users/sid/.m2/repository/org/springframework/spring-web/4.3.6.RELEASE/spring-web-4.3.6.RELEASE.jar","type":"JAR","hints":{}},"ABSENT"]]
+[[{"location":"/Library/Java/JavaVirtualMachines/jdk1.8.0_111.jdk/Contents/Home","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
