--- a/rest/weather-rest/pom.xml
+++ b/rest/weather-rest/pom.xml
@@ -37,7 +37,7 @@
 	</build>
 
   <dependencies>
-  	<dependency>
+  		<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-webmvc</artifactId>
 	    <version>4.3.6.RELEASE</version>
@@ -52,6 +52,21 @@
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>javax.servlet-api</artifactId>
 	    <version>3.1.0</version>
+	</dependency>
+	<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
+	</dependency>
+	<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.2.8.Final</version>
+	</dependency>
+	<dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-orm</artifactId>
+    	<version>4.3.6.RELEASE</version>
 	</dependency>
   </dependencies>
 </project>
