--- a/rest/weather-rest/pom.xml
+++ b/rest/weather-rest/pom.xml
@@ -68,5 +68,15 @@
     	<artifactId>spring-orm</artifactId>
     	<version>4.3.6.RELEASE</version>
 	</dependency>
+		<dependency>
+    	<groupId>io.springfox</groupId>
+   		<artifactId>springfox-swagger2</artifactId>
+    	<version>2.6.1</version>
+	</dependency>
+	<dependency>
+    	<groupId>io.springfox</groupId>
+   		<artifactId>springfox-swagger-ui</artifactId>
+    	<version>2.6.1</version>
+	</dependency>
   </dependencies>
 </project>
